--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
     "@mui/system": "^5.15.9",
+    "@mui/x-date-pickers": "^6.19.4",
     "@tanstack/react-query": "^5.20.1",
     "axios": "^1.6.7",
     "chroma-js": "^2.4.2",
