--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.1.4",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
@@ -17,6 +18,7 @@
     "@mui/system": "^5.15.9",
     "@mui/x-date-pickers": "^6.19.4",
     "@tanstack/react-query": "^5.20.1",
+    "aws-amplify": "^6.0.16",
     "axios": "^1.6.7",
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.10",
