--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.1.0",
+    "react-refresh": "^0.14.0",
     "typescript": "^5.3.3"
   }
 }
